# deploy-serverless-cluster

platform/deepflow/: README.md  loadbalancer-type-grafana.sh  manifest.yaml  values-custom.yaml
platform/knative-eventing/: config-br-defaults.yaml  kafka-broker-config.yaml  kafka-broker-test.yaml  kafka-config-logging-debug.yaml  nohup.out
platform/knative-serving/: helloworld.yaml  serving-default-domain.yaml
platform/minio-app/: README.md  helm-minio-values.yaml  minio-app.yaml  minio-benchmark.yaml  minio-client.yaml  minio-helm-local.yaml  minio-helm.yaml
platform/openebs/: README.md  deploy-openebs.sh
platform/prometheus/: values-custom.yaml
platform/strimzi-kafka/: README.md  kafka-single-node.yaml
util-scripts/: customize-function-resources.sh
utility-scripts/: README.md  list-trigger.sh
workloads/: custom-knative-serving-features.sh  customize-function-autoscaling.sh  start-curl-pod.sh
workloads/compression/compression-python/: func.yaml  pyproject.toml
workloads/dnavis-python/: deploy.sh  func.yaml  pyproject.toml  requirements.txt
workloads/dnavis-python/function/: func.py
workloads/dnavis/dnavis-golang/: func.yaml  handle.go
workloads/dnavis/dnavis-python/: pyproject.toml
workloads/dnavis/dnavis-python/function/: func.py
workloads/dynamic-html/webapp-golang/: func.yaml  handle.go
workloads/dynamic-html/webapp-python/: pyproject.toml
workloads/dynamic-html/webapp-python/function/: func.py
workloads/graph-bfs/graph-bfs-golang/: func.yaml  handle.go
workloads/graph-bfs/graph-bfs-python/: func.yaml  pyproject.toml
workloads/graph-mst/graph-mst-python/: func.yaml
workloads/graph-pagerank/graph-pagerank-python/: func.yaml  pyproject.toml
workloads/image-recognition/image-recognition-python/: func.yaml  pyproject.toml
workloads/knative-quarkus-bench/manifests/: bfs_trigger.yaml  clock_ksvc.yaml  clock_trigger.yaml  compress_ksvc.yaml  dnavis_ksvc.yaml  dnavis_trigger.yaml  dynamichtml_ksvc.yaml  graph_bfs_ksvc.yaml  graph_mst_ksvc.yaml  graph_pg_ksvc.yaml  html_trigger.yaml  image_ksvc.yaml  image_trigger.yaml  mst_trigger.yaml  network_ksvc.yaml  network_trigger.yaml  pg_trigger.yaml  server_ksvc.yaml  server_trigger.yaml  sleep_ksvc.yaml  sleep_trigger.yaml  thumbnailer_ksvc.yaml  thumbnailer_trigger.yaml  uploader_ksvc.yaml  uploader_trigger.yaml  video_ksvc.yaml  video_trigger.yaml
workloads/obs/: func.yaml  handle.go
workloads/tests/: curl-test.sh
workloads/tests/test-go/: func.yaml
workloads/thumbnailer-go/: func.yaml  handle.go
workloads/thumbnailer-golang/: func.yaml
workloads/thumbnailer-python/: deploy.sh  func.yaml
workloads/thumbnailer/thumbnailer-python/: func.yaml  pyproject.toml
workloads/webapp-python/: func.yaml
(+22 files in other folders)
