[tool.poetry]
name = "function"
version = "0.1.0"
description = "Knative function with MinIO integration"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{ include = "function" }]  # Point to your function directory (where your code is)

[tool.poetry.dependencies]
python = "^3.8"  # Adjust based on the Python version you're using
minio = "^7.1.3"  # MinIO client to interact with MinIO storage
squiggle = "^1.0.0"  # Adjust based on the version of Squiggle you're using

[tool.poetry.dev-dependencies]
pytest = "^6.2"  # Optional, if you want testing support

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
