[project]
name = "function"
version = "0.1.0"
description = "Knative function with MinIO integration"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "minio>=7.1.3",
  "squiggle>=0.3.1",
  "pickle"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
