[project]
name = "function"
description = "A simple Python function to generate HTML with random numbers"
version = "1.0.0"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "jinja2",
  "httpx",
  "pytest",
  "pytest-asyncio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly specify file inclusion for wheel build
[tool.hatch.build.targets.wheel]
packages = ["function"]  # This tells hatch to include the function package
include = ["requirements.txt"]  # Include additional files

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"